# Honey_Editor

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
assets/: imgui.ini
assets/frame_graphs/: deferred.hnfg  forward.hnfg  main.hnfg  main_deferred.hnfg  pathtracing.hnfg
assets/models/GeometricShapes/: Plane.glb  cube.glb  sphere.glb
assets/prefabs/: KinPipe.hnp  Pipe.hnp  SpawnedLight.hnp
assets/scenes/: game.hns  game_mac.hns  goose.hns  rectangle.hns  sponza.hns  test_basic.hns  test_scene.hns  testback.hns
assets/scripts/: BobAndSpin.cs  BulletController.cs  CMakeLists.txt  Entity.cs  FirstPersonController.cs  GlueTest.cs  bird.lua  bird_controller.h  bob_and_spin.lua  buildingController.lua  bushController.lua  camera_controller.h  cloudController.lua  firstPersonController.lua  floorController.lua  lightSpawner.lua  lightWander.lua  musicController.lua  pipe.lua  pipeSpawner.lua  pipe_contoller.h  pipe_spawner.h  player_controller.h  script_entry.cpp  script_registrar.h  scriptable_entity.cs  scripts.sln  test.cs  test.h  test.lua  traceCircle.lua
assets/scripts-cs/: UserScripts.csproj
assets/scripts/scripts/: Entity.cs  Honey-ScriptCore.csproj  InternalCalls.cs  Player.cs  test.cs
assets/scripts/scripts/Properties/: launchSettings.json
assets/shaders/: ClothRender.glsl  ClothSeed.comp.glsl  ClothSim.comp.glsl  CommonHelpers.glsl  PathTrace_ClosestHit.rchit  PathTrace_Miss.rmiss  PathTrace_RayGen.rgen  PathTrace_SVGF.comp  PathTrace_ShadowMiss.rmiss  Renderer2D_Circle.glsl  Renderer2D_DebugPick.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Renderer2D_QuadNoPick.glsl  Renderer2D_Text.glsl  Renderer3D_Debug.glsl  Renderer3D_DeferredGeometry.glsl  Renderer3D_DeferredLighting.glsl  Renderer3D_Forward.glsl  Renderer3D_Meshlet.glsl  Renderer3D_MeshletDeferred.glsl  Renderer3D_SSAO.glsl  Renderer3D_SSAOBlur.glsl  Renderer3D_ShadowCubemap.glsl  Renderer3D_ShadowCubemap_Classic.glsl  Renderer3D_ShadowDirectional.glsl  Renderer3D_ShadowDirectional_Classic.glsl  basic3d.glsl  flat_color.glsl  quad.frag  quad.vert  texture.glsl  triangle.frag  triangle.vert  vertex_decode.glsl
assets/shaders/PathTrace/: PathTrace_ClosestHit.rchit  PathTrace_Extend.rgen  PathTrace_HitRecord.glsl  PathTrace_Logic.comp  PathTrace_Material.comp  PathTrace_Miss.rmiss  PathTrace_NewPath.comp  PathTrace_Shadow.rgen  PathTrace_ShadowMiss.rmiss  PathTrace_ShadowRayRequest.glsl
cmake/: CopyIfMissing.cmake
config/: HoneyScripting.runtimeconfig.json  settings.yaml
resources/defaults/: imgui.ini
src/: editor_layer.cpp  editor_layer.h  gltf_entity_builder.h  honey_editor_app.cpp
src/panels/: content_browser_panel.cpp  content_browser_panel.h  physics_debug_panel.cpp  physics_debug_panel.h  renderer_debug_panel.cpp  renderer_debug_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  viewport_panel.cpp  viewport_panel.h
src/scripting/: script_loader.cpp  script_loader.h
